infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-stack
  labels:
    app: app-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-stack
  template:
    metadata:
      labels:
        app: app-stack
    spec:
      containers:
        - name: app-stack-api-1
          image: omidmohebbi/simple-spring-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
