infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-stack-service
spec:
  selector:
    app: app-stack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: LoadBalancer
---
  apiVersion: v1
  kind: Service
  metadata:
    name: postgres-service
  spec:
    selector:
      app: postgres
    ports:
      - protocol: TCP
        port: 5432
        targetPort: 5432
    type: ClusterIP
